--- a/projects/Allwinner/linux/linux.aarch64.conf
+++ b/projects/Allwinner/linux/linux.aarch64.conf
@@ -5060,7 +5060,8 @@ CONFIG_STAGING=y
 # CONFIG_RTLLIB is not set
 CONFIG_RTL8723BS=m
 # CONFIG_R8712U is not set
-# CONFIG_R8188EU is not set
+CONFIG_R8188EU=m
+# CONFIG_88EU_AP_MODE is not set
 # CONFIG_VT6656 is not set
 
 #
