--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -5468,7 +5468,8 @@ CONFIG_RTL8192U=m
 # CONFIG_RTLLIB is not set
 CONFIG_RTL8723BS=m
 CONFIG_R8712U=m
-# CONFIG_R8188EU is not set
+CONFIG_R8188EU=m
+# CONFIG_88EU_AP_MODE is not set
 CONFIG_RTS5208=y
 # CONFIG_VT6655 is not set
 CONFIG_VT6656=m
