--- a/projects/NXP/devices/iMX6/linux/linux.arm.conf
+++ b/projects/NXP/devices/iMX6/linux/linux.arm.conf
@@ -5152,7 +5152,8 @@ CONFIG_STAGING=y
 # CONFIG_RTLLIB is not set
 # CONFIG_RTL8723BS is not set
 # CONFIG_R8712U is not set
-# CONFIG_R8188EU is not set
+CONFIG_R8188EU=m
+# CONFIG_88EU_AP_MODE is not set
 # CONFIG_RTS5208 is not set
 # CONFIG_VT6655 is not set
 # CONFIG_VT6656 is not set
