--- a/projects/Samsung/linux/linux.arm.conf
+++ b/projects/Samsung/linux/linux.arm.conf
@@ -4092,7 +4092,8 @@ CONFIG_STAGING=y
 # CONFIG_RTLLIB is not set
 CONFIG_RTL8723BS=m
 CONFIG_R8712U=m
-# CONFIG_R8188EU is not set
+CONFIG_R8188EU=m
+# CONFIG_88EU_AP_MODE is not set
 CONFIG_VT6656=m
 
 #
