--- a/projects/L4T/devices/Switch/packages/switch-alsa-ucm-configs/system.d/alsa-init.service
+++ b/projects/L4T/devices/Switch/packages/switch-alsa-ucm-configs/system.d/alsa-init.service
@@ -3,7 +3,7 @@ Description=Restore alsa configs
 Before=pulseaudio.service
 
 [Service]
-ExecStart=alsactl --file /storeage/.config/asound.state restore
+ExecStart=alsactl --file /storage/.config/asound.state restore
 ExecStop=alsactl --file /storage/.config/asound.state store
 
 [Install]
