--- a/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
+++ b/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
@@ -5856,7 +5856,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="ascii"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
 # CONFIG_EXFAT_FS is not set
 # CONFIG_NTFS_FS is not set
-# CONFIG_NTFS3_FS is not set
+CONFIG_NTFS3_FS=m
 # CONFIG_NTFS3_64BIT_CLUSTER is not set
 # CONFIG_NTFS3_LZX_XPRESS is not set
 # CONFIG_NTFS3_FS_POSIX_ACL is not set
