Allwinner: alsa: fix config files

--- a/projects/Allwinner/filesystem/usr/share/alsa/cards/simple-card.conf
+++ b/projects/Allwinner/filesystem/usr/share/alsa/cards/simple-card.conf
@@ -22,7 +22,7 @@ simple-card.pcm.hdmi."allwinner-hdmi" {
 		type ctl_elems
 		hook_args [
 			{
-				interface MIXER
+				interface PCM
 				name "IEC958 Playback Default"
 				lock true
 				preserve true
@@ -71,6 +71,8 @@ simple-card.pcm.hdmi.0 {
 
 <confdir:pcm/iec958.conf>
 
+simple-card.pcm.iec958."On-board SPDIF" "cards.simple-card.pcm.iec958.sun50i-h6-spdif"
+
 simple-card.pcm.iec958."sun50i-h6-spdif" {
 	@args [ CARD DEVICE AES0 AES1 AES2 AES3 ]
 	@args.CARD { type string }
@@ -89,7 +91,7 @@ simple-card.pcm.iec958."sun50i-h6-spdif" {
 		type ctl_elems
 		hook_args [
 			{
-				interface MIXER
+				interface PCM
 				name "IEC958 Playback Default"
 				lock true
 				preserve true
