linux (RPi): enable CONFIG_NOP_USB_XCEIV=y
This fixes non-working dwc_otg

Signed-off-by: Matthias Reichl <hias@horus.com>

--- a/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
+++ b/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
@@ -2954,6 +2954,7 @@ CONFIG_RPI_POE_POWER=m
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_BATTERY_MAX17042 is not set
 # CONFIG_BATTERY_MAX1721X is not set
+# CONFIG_CHARGER_ISP1704 is not set
 # CONFIG_CHARGER_MAX8903 is not set
 # CONFIG_CHARGER_LP8727 is not set
 # CONFIG_CHARGER_GPIO is not set
@@ -5069,7 +5070,8 @@ CONFIG_USB_SERIAL_PL2303=m
 #
 # USB Physical Layer drivers
 #
-# CONFIG_NOP_USB_XCEIV is not set
+CONFIG_USB_PHY=y
+CONFIG_NOP_USB_XCEIV=y
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ISP1301 is not set
 # CONFIG_USB_ULPI is not set
@@ -5566,7 +5568,7 @@ CONFIG_RASPBERRYPI_POWER=y
 # end of SOC (System On Chip) specific Drivers
 
 # CONFIG_PM_DEVFREQ is not set
-CONFIG_EXTCON=m
+CONFIG_EXTCON=y
 
 #
 # Extcon Device Drivers
