retroarch: remove tmp-cheats from retroarch.service unit

--- a/packages/lakka/retroarch_base/retroarch/system.d/retroarch.service
+++ b/packages/lakka/retroarch_base/retroarch/system.d/retroarch.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Retroarch
-After=tmp-assets.mount tmp-cheats.mount tmp-cores.mount tmp-database.mount tmp-joypads.mount tmp-overlays.mount tmp-shaders.mount tmp-system.mount
+After=tmp-assets.mount tmp-cores.mount tmp-database.mount tmp-joypads.mount tmp-overlays.mount tmp-shaders.mount tmp-system.mount
 ConditionKernelCommandLine=!retroarch=0
 Requires=graphical.target
 
