Properly fix mtp, and finish gadget stuff

--- a/projects/L4T/devices/Switch/linux/linux.aarch64.conf
+++ b/projects/L4T/devices/Switch/linux/linux.aarch64.conf
@@ -3511,7 +3511,7 @@ CONFIG_USB_CONFIGFS_ACM=y
 CONFIG_USB_CONFIGFS_F_FS=y
 # CONFIG_USB_CONFIGFS_F_MTP is not set
 # CONFIG_USB_CONFIGFS_F_ACC is not set
-# CONFIG_USB_CONFIGFS_UEVENT is not set
+CONFIG_USB_CONFIGFS_UEVENT=y
 # CONFIG_USB_CONFIGFS_F_UAC1 is not set
 # CONFIG_USB_CONFIGFS_F_UAC2 is not set
 # CONFIG_USB_CONFIGFS_F_MIDI is not set
