--- a/projects/L4T/devices/Switch/packages/usb-gadget-scripts/system.d/usb-tty.service
+++ b/projects/L4T/devices/Switch/packages/usb-gadget-scripts/system.d/usb-tty.service
@@ -1,6 +1,7 @@
 [Unit]
-Description=Configure Nintendo Switch Gadget Framework
-After=usb-gadget.service
+Description=Start getty on ttyGS0
+Requires=usb-gadget-finalize.service
+After=usb-gadget-finalize.service
 
 [Service]
 ExecStart=agetty --local-line 9600 ttyGS0 vt100
