linux (RPi): add CONFIG_R8188EU=m
Signed-off-by: Matthias Reichl <hias@horus.com>

--- a/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
+++ b/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
@@ -1330,6 +1330,10 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_DEBUGFS is not set
 # CONFIG_CFG80211_CRDA_SUPPORT is not set
 CONFIG_CFG80211_WEXT=y
+CONFIG_LIB80211=m
+CONFIG_LIB80211_CRYPT_WEP=m
+CONFIG_LIB80211_CRYPT_CCMP=m
+# CONFIG_LIB80211_DEBUG is not set
 CONFIG_MAC80211=m
 CONFIG_MAC80211_HAS_RC=y
 CONFIG_MAC80211_RC_MINSTREL=y
@@ -5408,7 +5412,8 @@ CONFIG_STAGING=y
 # CONFIG_RTLLIB is not set
 CONFIG_RTL8723BS=m
 CONFIG_R8712U=m
-# CONFIG_R8188EU is not set
+CONFIG_R8188EU=m
+# CONFIG_88EU_AP_MODE is not set
 # CONFIG_RTS5208 is not set
 # CONFIG_VT6655 is not set
 CONFIG_VT6656=m
