linux (Generic): support NLMON for iwd and iwmon

--- a/projects/Amlogic/linux/linux.aarch64.conf
+++ b/projects/Amlogic/linux/linux.aarch64.conf
@@ -1962,7 +1962,7 @@ CONFIG_NET_POLL_CONTROLLER=y
 CONFIG_TUN=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 # CONFIG_ARCNET is not set
 CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_3COM is not set
