--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -1955,7 +1955,7 @@ CONFIG_TUN=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=y
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 # CONFIG_ARCNET is not set
 CONFIG_ETHERNET=y
 CONFIG_MDIO=y
