--- a/projects/NXP/devices/iMX6/linux/linux.arm.conf
+++ b/projects/NXP/devices/iMX6/linux/linux.arm.conf
@@ -1660,7 +1660,7 @@ CONFIG_WIREGUARD=m
 # CONFIG_TUN is not set
 # CONFIG_TUN_VNET_CROSS_LE is not set
 # CONFIG_VETH is not set
-CONFIG_NLMON=y
+CONFIG_NLMON=m
 # CONFIG_ARCNET is not set
 
 #
