--- a/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
+++ b/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
@@ -1746,7 +1746,7 @@ CONFIG_NET_POLL_CONTROLLER=y
 CONFIG_TUN=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_ALACRITECH is not set
 # CONFIG_ALTERA_TSE is not set
