--- a/projects/Qualcomm/devices/Dragonboard/linux/linux.aarch64.conf
+++ b/projects/Qualcomm/devices/Dragonboard/linux/linux.aarch64.conf
@@ -2120,7 +2120,7 @@ CONFIG_TUN=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 # CONFIG_VETH is not set
 # CONFIG_VIRTIO_NET is not set
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 # CONFIG_ARCNET is not set
 CONFIG_ETHERNET=y
 CONFIG_NET_VENDOR_3COM=y
