--- a/projects/RPi/devices/RPi/linux/linux.arm.conf
+++ b/projects/RPi/devices/RPi/linux/linux.arm.conf
@@ -1421,7 +1421,7 @@ CONFIG_NET_POLL_CONTROLLER=y
 CONFIG_TUN=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 # CONFIG_ETHERNET is not set
 CONFIG_PHYLIB=y
 CONFIG_SWPHY=y
