--- a/projects/Rockchip/devices/RK3288/linux/default/linux.arm.conf
+++ b/projects/Rockchip/devices/RK3288/linux/default/linux.arm.conf
@@ -1440,7 +1440,7 @@ CONFIG_TAP=m
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=y
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 
 #
 # Distributed Switch Architecture drivers
