--- a/projects/Rockchip/devices/RK3328/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3328/linux/default/linux.aarch64.conf
@@ -1669,7 +1669,7 @@ CONFIG_TAP=m
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=y
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_ALACRITECH is not set
 # CONFIG_ALTERA_TSE is not set
