--- a/projects/Allwinner/linux/linux.aarch64.conf
+++ b/projects/Allwinner/linux/linux.aarch64.conf
@@ -1825,7 +1825,7 @@ CONFIG_TUN=y
 CONFIG_TAP=m
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 CONFIG_ETHERNET=y
 CONFIG_NET_VENDOR_ALACRITECH=y
 CONFIG_NET_VENDOR_ALLWINNER=y
