--- a/projects/Allwinner/linux/linux.arm.conf
+++ b/projects/Allwinner/linux/linux.arm.conf
@@ -1635,7 +1635,7 @@ CONFIG_NET_POLL_CONTROLLER=y
 CONFIG_TUN=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 CONFIG_ETHERNET=y
 CONFIG_NET_VENDOR_ALACRITECH=y
 CONFIG_NET_VENDOR_ALLWINNER=y
