--- a/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
@@ -1918,7 +1918,7 @@ CONFIG_TAP=m
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=y
-# CONFIG_NLMON is not set
+CONFIG_NLMON=m
 # CONFIG_ARCNET is not set
 CONFIG_ETHERNET=y
 CONFIG_NET_VENDOR_3COM=y
