--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -1639,7 +1639,7 @@ CONFIG_VIRTIO_BLK=y
 CONFIG_NVME_CORE=y
 CONFIG_BLK_DEV_NVME=y
 CONFIG_NVME_MULTIPATH=y
-# CONFIG_NVME_HWMON is not set
+CONFIG_NVME_HWMON=y
 # CONFIG_NVME_FC is not set
 # CONFIG_NVME_TCP is not set
 # CONFIG_NVME_TARGET is not set
